--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 ; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
+;   Upload options: custom upload port, speed and extra flagsY
 ;   Library options: dependencies, extra library storages
 ;   Advanced options: extra scripting
 ;
@@ -18,25 +18,30 @@ upload_port = /dev/cu.SLAB_USBtoUART
 monitor_port = /dev/cu.SLAB_USBtoUART
 monitor_speed = 115200
 framework = arduino
-lib_deps = 
+lib_deps =
 	fastled/FastLED@^3.9.20
 	bblanchon/ArduinoJson@^6.18.0
 	marian-craciunescu/ESP32Ping@^1.7
 	blynkkk/Blynk@^1.0.0
 	adafruit/RTClib@^2.0.1
 	adafruit/Adafruit BusIO@^1.14.3
+	knolleary/PubSubClient@^2.8.0
 
 [env:esp32-wroom-32d]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = 
+lib_deps =
 	fastled/FastLED @ ^3.9.20
 	blynkkk/Blynk @ ^0.6.1
 	bblanchon/ArduinoJson @ ^6.16.1
 	marian-craciunescu/ESP32Ping@^1.5
 	adafruit/RTClib@^2.0.1
 	adafruit/Adafruit BusIO@^1.14.3
+	knolleary/PubSubClient@^2.8.0
 upload_port = /dev/cu.usbserial-0001
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
+
+build_flags =
+  -DMQTT_MAX_PACKET_SIZE=2048
