--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 ; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flagsY
+;   Upload options: custom upload port, speed and extra flags
 ;   Library options: dependencies, extra library storages
 ;   Advanced options: extra scripting
 ;
@@ -12,6 +12,7 @@
 default_envs = esp32-wroom-32d
 
 [env:espif32-DevKit]
+extra_scripts = pre:tools/version.py
 platform = espressif32
 board = esp32doit-devkit-v1
 upload_port = /dev/cu.SLAB_USBtoUART
@@ -28,6 +29,7 @@ lib_deps =
 	knolleary/PubSubClient@^2.8.0
 
 [env:esp32-wroom-32d]
+extra_scripts = pre:tools/version.py
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
