feat: OTA support with 1password protected OTA pwd

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,4 +46,27 @@ monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
 
 build_flags =
-  -DMQTT_MAX_PACKET_SIZE=2048
+    -DMQTT_MAX_PACKET_SIZE=2048
+
+; OTA password is provided via environment variable OTA_PASSWORD.
+; This keeps secrets out of git.
+; Optional OTA upload environment.
+; First flash must be over USB. After that, you can use OTA.
+; Usage example:
+;   pio run -e esp32-wroom-32d_ota -t upload --upload-port 192.168.1.50
+[env:esp32-wroom-32d_ota]
+extends = env:esp32-wroom-32d
+upload_protocol = espota
+
+; Upload over-the-air:
+;   pio run -e esp32-wroom-32d_ota -t upload --upload-port 192.168.55.110
+;
+; If your laptop has multiple interfaces (VPN/Docker/etc.), also pass:
+;   --upload-flags="--host_ip=192.168.55.X"
+
+upload_flags =
+  --auth=${sysenv.OTA_PASSWORD}
+  --timeout=60
+
+; upload_port can be an IP or mDNS name (if mDNS works on your network)
+; upload_port = windclock-XXXXXX.local
