--- a/platformio.ini
+++ b/platformio.ini
@@ -47,6 +47,7 @@ monitor_speed = 115200
 
 build_flags =
     -DMQTT_MAX_PACKET_SIZE=2048
+    -Wno-pragmas
 
 ; OTA password is provided via environment variable OTA_PASSWORD.
 ; This keeps secrets out of git.
